Fixed grid spacing

--- a/css/style.css
+++ b/css/style.css
@@ -63,9 +63,10 @@ h4 {
   max-width: 80%;
 }
 
-p {
-  margin-bottom: 20px;
+img {
+  box-shadow: var(--box-shadow);
 }
+
 @media (max-width: 576px) {
   h1 {
     font-size: 48px;
@@ -78,6 +79,7 @@ p {
     font-size: 25px;
   }
   .introduction-container {
-    padding: 80px, 0;
+    padding-top: 50px;
+    padding-bottom: 50px;
   }
 }
